# yomi-skill

./: .dockerignore  .gitignore  .travis.yml  0e6afa38bcec18ef6b02f12adfdb9bb9-2018-11-20-21:46:46.stan  165eac82d0ff9a5eedae03d5326dc6fa-2018-11-22-01:18:23.stan  62658c54e29fead6df62968b5f7ea02f-2018-11-21-21:02:37.stan  8ff9779a4e550d48295d6f1b751a861b-2018-11-21-11:54:39.stan  BaCON Elo.ipynb  Bayesian Skill.ipynb  CNAME  Character Specialists.ipynb  Counterpick Computations.ipynb  Dockerfile  MANIFEST.in  Makefile  Model Check Y2.ipynb  Model Check.ipynb  Nash Equilibrium.ipynb  README.md  Skill Record.ipynb  Yomi Elo.ipynb  astro.config.mjs  bacon-versions.html  bacon.html  bacon.py  char_skill_elo.stan  char_skill_elo_skill_deficit.stan  char_skill_elo_skill_deficit_pooled.stan  char_skill_elo_skill_deficit_pooled_priors.stan  char_skill_elo_skill_deficit_pooled_weighted.stan  char_skill_elo_skill_deficit_pooled_weighted_priors.stan  char_skill_elo_skill_deficit_priors.stan  char_skill_elo_skill_deficit_versioned.stan  char_skill_elo_skill_deficit_versioned_hier.stan  char_skill_elo_skill_deficit_weighted.stan  char_skill_elo_skill_deficit_weighted_priors.stan  char_skill_only.stan  char_skill_pooled_elo.stan  character.py  elo_only.stan  (+27 more)
.github/workflows/: deploy.yml
bacon/: index.html
bacon/playerData/: ????.json  ARBco.json  Aliphant.json  AndYPH.json  Andytheman119.json  Artifice.json  Ayanavi.json  Azzoth.json  Badsnaga.json  BellMix.json  Ben4d90.json  BlakxHeart.json  BlankTag.json  Blatm.json  BuffaloWings909.json  CAnon.json  CCalmify.json  Chykka.json  Cindurion.json  Comber.json  Copper8642.json  Dangief.json  Demonikai.json  Doomburrito.json  (+125 more)
container/: Dockerfile  requirements.in  requirements.txt
docs/: index.html  main.js
site/: index.html  main.js  package-lock.json  package.json
src-js/: types.ts
src-lambda/: api-project-1086903378618-355bb3e2fa54.json  requirements.txt  results_uploader.py
src-site/: package-lock.json  package.json
templates/: bacon.html  matchup-comparator-template.html  yomi.html
yomi/: character.py  historical_record.py  matchupData.json  playerSkill.json
(+2734 files in other folders)
