[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "yomi_skill"
authors = [
    {name = "Calen Pennington", email = "calen.pennington@gmail.com"},
]
description = "Tools for analyzing player skill and matchup balance in two player cardgames"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "arviz",
    "bacon-replay-analyzer",
    "click_log",
    "cmdstanpy",
    "Cython>=0.29",
    "fastparquet",
    "ipython[notebook]",
    "jupyter",
    "jupyterlab",
    "mako",
    "matplotlib",
    "numpy",
    "pandas",
    "pandas-stubs",
    "pip-tools",
    "plotly",
    "plotnine",
    "pygambit",
    "scikit-learn",
    "scipy",
    "skills",
    "sympy",
    "toposort",
    "pyarrow",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
yomi-skill = "yomi_skill.yomi_skill:cli"